--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -51,7 +51,7 @@
             <label>to</label>
             <input placeholder="maximum" id="maximum" />
             <input type="button" value="Apply" id="apply-filter" class="btn btn-secondary" />
-            <input type="button" value="Reset" id="reset-filter" class="btn btn-outline-secondary"/>
+            <input type="button" value="Reset" id="reset-filter" class="btn btn-outline-secondary" />
             <div class="tax-toggle">
                 <div class="form-check-reverse form-switch">
                     <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
@@ -68,18 +68,22 @@
                                 style="height: 20rem">
                             <div class="card-img-overlay"></div>
                             <div class="card-body">
-                                <p class="card-text">
-                                    <b>
-                                        <%= listing.title %>
-                                    </b> <br>
+                                <h6 class="card-title pt-1">
+                                    <%= listing.title %>
+                                </h6>
+
                                 <div class="card-price" style="display: none;">
                                     <%= listing.price %>
                                 </div>
-                                <% if (listing.price !=null && listing.price !==undefined) { %>
-                                    &#8377 <%= listing.price.toLocaleString("en-IN") %> /night
-                                        <i class="tax-info">&nbsp; &nbsp; +18% GST</i>
-                                        <% } %>
-                                            </p>
+                                <div style="font-size: smaller;">
+                                    <% if (listing.price !=null && listing.price !==undefined) { %>
+                                        &#8377 <%= listing.price.toLocaleString("en-IN") %>
+                                            <i class="tax-info">(+<%= (listing.price * 0.18).toLocaleString("en-IN") %>
+                                                    GST
+                                                    = &#8377 <%= listing.price + (listing.price * 0.18) %>) </i> /night
+                                            <% } %>
+                                </div>
+
                             </div>
                         </div>
                     </a>
@@ -127,7 +131,7 @@
 
         //Reset Filter click handler
         let resetButton = document.getElementById("reset-filter");
-        resetButton.addEventListener("click", ()=>{
+        resetButton.addEventListener("click", () => {
             document.getElementById("minimum").value = "";
             document.getElementById("maximum").value = "";
             applyButton.click();
