--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -22,15 +22,14 @@
 
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+    <div class="container-fluid">            
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="/listings">Explore</a>
-        </div>
+        <a class="navbar-brand w-25" href="/listings">
+          <img src="/images/logo.png" width="80%" />
+        </a>
         <div class="navbar-nav ms-auto">
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-input" type="search" placeholder="Search destinations">
